# FantaAnalytics

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  composer.json
apps/api/bootstrap/: app.php
apps/web/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
contracts/examples/: player.v1.invalid.json  player.v1.valid.json
contracts/json-schema/: player-score.v1.schema.json  player.v1.schema.json  price-prediction.v1.schema.json
contracts/openapi/: analytics-read-api.v1.json
data/samples/: demo_players.csv
database/: transfermarkt.db
docs/: ARCHITECTURE.md  AUCTION_ENGINE.md  DATA_MODEL.md  DATA_SOURCES.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  REPOSITORY_AUDIT.md  SCORING_ENGINE.md  SECURITY.md
models/: player.py
scraper/: transfermarkt.py
scripts/dev/: health-check.sh  open-app.sh  stack-env.sh  start-backend.sh  start-frontend.sh  stop.sh
services/: csv_service.py  database_service.py
services/analytics/: Dockerfile  __init__.py
tests/: test_analytics_importer.py  test_analytics_scoring_pricing.py  test_canonical_import.py  test_contracts.py  test_database_service.py  test_main_pipeline.py  test_player_age.py  test_read_api.py  test_settings.py  test_transfermarkt_adapter.py  test_transfermarkt_progressive.py  test_transfermarkt_scraper.py
(+82 files in other folders)
