[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantaanalytics"
version = "0.1.0"
description = "Deterministic analytics and import foundation for FantaAnalytics"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
